kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gametrade
  labels:
    name: gametrade
    environment: common
